[package]
name = "stablessh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
hostname = "0.3.1"
log = "0.4.21"
quinn = "0.10.2"
rcgen = "0.12.1"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
tokio = { version = "1.36.0", features = ["full"] }
x509-parser = "0.16.0"
