[package]
name = "stablessh"
description = "Keeps SSH on even when laptop is closed"
keywords = ["ssh", "quic", "quinn"]
categories = ["development-tools"]
version = "0.1.5"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
hostname = "0.4.0"
log = "0.4.21"
quinn = "0.11.1"
rcgen = "0.12.1"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
x509-parser = "0.16.0"
sha256 = "1.5.0"
prettytable-rs = "0.10.0"

[build-dependencies]
tonic-build = "0.11"
